# EMCUnitTST

./: .gitignore  CMakeLists.txt  README.md  demo.cc  test.mac  vis.mac
data/: CsI_properties.csv  LYSO_properties.csv  LaBr_properties.csv  PMT_properties.csv  SiPM_properties.csv
include/: ActionInitialization.hh  CreateMapFromCSV.hh  DetectorConstruction.hh  EventAction.hh  PhotonHit.hh  PhotonSD.hh  PrimaryGeneratorAction.hh  RunAction.hh  ScintillatorHit.hh  ScintillatorSD.hh  SiPMHit.hh  SiPMSD.hh
macros/: bkg.mac  co60.mac  cs137.mac  eu152.mac  mono.mac  na22.mac  source.mac  test.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhotonSD.cc  PrimaryGeneratorAction.cc  RunAction.cc  ScintillatorSD.cc  SiPMSD.cc
